--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -11,6 +12,16 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "chalk": "2.4.2",
+    "jsonwebtoken": "8.5.1",
+    "axios": "0.19.2",
+    "express-rate-limit": "5.1.3",
+    "dotenv": "8.2.0",
+    "email-templates": "7.0.5",
+    "sha256": "0.2.0",
+    "mysql": "2.18.1"
   }
 }
