--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "body-parser": "1.19.0",
-    "cors": "2.8.5",
-    "chalk": "2.4.2",
-    "jsonwebtoken": "8.5.1",
     "axios": "0.19.2",
-    "express-rate-limit": "5.1.3",
+    "body-parser": "1.19.0",
+    "chalk": "2.4.2",
+    "cookie-parser": "~1.4.3",
+    "cors": "2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "8.2.0",
     "email-templates": "7.0.5",
+    "express": "~4.16.0",
+    "express-rate-limit": "5.1.3",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "8.5.1",
+    "morgan": "~1.9.0",
+    "mysql": "2.18.1",
+    "nodemailer": "^6.4.10",
     "sha256": "0.2.0",
-    "mysql": "2.18.1"
+    "validator": "^11.1.0"
   }
 }
