--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "email-templates": "7.0.5",
     "express": "~4.16.0",
     "express-rate-limit": "5.1.3",
+    "express-validator": "^6.6.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "8.5.1",
