--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "8.2.0",
     "email-templates": "7.0.5",
     "express": "~4.16.0",
+    "express-bearer-token": "^2.4.0",
     "express-rate-limit": "5.1.3",
     "express-validator": "^6.6.0",
     "http-errors": "~1.6.2",
