--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-bearer-token": "^2.4.0",
     "express-rate-limit": "5.1.3",
     "express-validator": "^6.6.0",
+    "handlebars": "^4.7.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "8.5.1",
